# xpanda

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  crates.js  help.html  rustfmt.toml  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: cd.yml  ci.yml  docs.yml
docs/: COMPARISON.md  PATTERNS.md
implementors/clap/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
search.index/: 6c5e8b6151.js  root.js
search.index/crateNames/: ad929e5332.js
search.index/desc/: 22aad8b050.js
search.index/entry/: df8eb03f93.js
search.index/function/: bf8e542966.js
search.index/generic_inverted_index/: c7c7e884b5.js
search.index/name/: 05e80adcfd.js
search.index/normalizedName/: c780ef9a85.js
search.index/path/: 2c88b40598.js
search.index/type/: f07de73ede.js
src/xpanda/: ast.rs.html  eval.rs.html  forward_peekable.rs.html  glob.rs.html  lexer.rs.html  lib.rs.html  parser.rs.html  position.rs.html  str_read.rs.html  token.rs.html
src/xpanda_cli/: args.rs.html  main.rs.html  read.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
xpanda/: Cargo.toml  README.md  all.html  index.html  sidebar-items.js  struct.Builder.html  struct.Error.html  struct.Xpanda.html
xpanda-cli/: Cargo.toml  README.md
xpanda-cli/src/: args.rs  main.rs  read.rs
xpanda-cli/tests/: xpanda-cli.rs
xpanda-fuzz/: Cargo.toml
xpanda-fuzz/targets/: fuzz_input.rs
xpanda/benches/: bench.rs  input.txt
xpanda/src/: ast.rs  eval.rs  forward_peekable.rs  glob.rs  lexer.rs  lib.rs  parser.rs  position.rs  str_read.rs  token.rs
xpanda/tests/: xpanda.rs
xpanda_cli/: all.html  fn.main.html  index.html  sidebar-items.js
xpanda_cli/args/: index.html  sidebar-items.js  struct.Args.html
xpanda_cli/read/: fn.read_input_file.html  fn.read_line.html  fn.read_named_arg.html  fn.read_output_file.html  fn.read_var_file.html  index.html  sidebar-items.js
