[package]
name = "xpanda-cli"
description = "Unix shell-like parameter expansion/variable substitution"
authors = ["Isak Wertwein <isak.wertwein@gmail.com>"]
homepage = "https://github.com/aesy/xpanda"
license-file = "LICENSE"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"

[dependencies]
xpanda = { path = "../xpanda" }
clap = { version = "3.2.17", features = ["derive"] }
