[package]
name = "xpanda-cli"
description = "Command line interface for Unix shell-like parameter expansion/variable substitution"
authors = ["Isak Wertwein <isak.wertwein@gmail.com>"]
homepage = "https://github.com/aesy/xpanda"
repository = "https://github.com/aesy/xpanda"
license-file = "../LICENSE"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
uuid = { version = "1.1.2", features = ["v4"] }

[dependencies]
xpanda = { path = "../xpanda" }
clap = { version = "4.0.2", features = ["derive"] }
