[package]
name = "xpanda-cli"
description = "Command line interface for Unix shell-like parameter expansion/variable substitution"
authors.workspace = true
homepage = "https://github.com/aesy/xpanda"
repository = "https://github.com/aesy/xpanda"
license-file = "../LICENSE"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
uuid.workspace = true

[dependencies]
xpanda = { path = "../xpanda" }
clap.workspace = true
