[package]
name = "xpanda"
description = "Unix shell-like parameter expansion/variable substitution"
authors.workspace = true
homepage = "https://github.com/aesy/xpanda"
repository = "https://github.com/aesy/xpanda"
documentation = "https://docs.rs/xpanda"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities", "template-engine", "text-processing"]
keywords = ["environment", "variable", "substitutaion", "parameter", "expansion"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dev-dependencies]
criterion.workspace = true

[dependencies]

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false
